--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - "8888:8888"
     depends_on: 
       - mlflow
-    environment: 
-      MLFLOW_TRACKING_URI: 'http://mlflow:5000'
+    env_file: 
+      - ./docker/jupyter/jupyter.env
     volumes: 
       - ./:/home/jovyan/work
       - ./mlflow:/mlflow
@@ -18,18 +18,21 @@ services:
     expose: 
       - "5000"
     ports:
-      - "5000:5000"
+      - "${MLFLOW_TRACKING_SERVER_PORT}:${MLFLOW_TRACKING_SERVER_PORT}"
     depends_on: 
       - postgres
+    env_file: 
+      - ./docker/mlflow/mlflow.env
+      - .env
     volumes:
       - ./mlflow:/mlflow
   postgres:
     build:
       context: ./docker/postgres
     restart: always
-    environment:
-      POSTGRES_USER: 'admin'
-      POSTGRES_PASSWORD: 'secret'
+    env_file: 
+      - ./docker/postgres/postgres.env
+      - .env
     ports: 
       - "5432:5432"
     volumes:
