--- a/docker/mlflow/Dockerfile
+++ b/docker/mlflow/Dockerfile
@@ -9,8 +9,8 @@ COPY ./scripts/ /server/
 RUN chmod +x /server/wait-for-it.sh
 
 WORKDIR /server
-CMD ./wait-for-it.sh postgres:5432 -- mlflow server \
-    --backend-store-uri postgresql://admin:secret@postgres:5432/mlflow \
-    --default-artifact-root /mlflow \
-    --host 0.0.0.0 \
-    --port 5000
+CMD ./wait-for-it.sh ${MLFLOW_BACKEND_STORE}:${POSTGRES_PORT} -- mlflow server \
+    --backend-store-uri postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${MLFLOW_BACKEND_STORE}:${POSTGRES_PORT}/${POSTGRES_DATABASE} \
+    --default-artifact-root ${MLFLOW_ARTIFACT_STORE} \
+    --host ${MLFLOW_TRACKING_SERVER_HOST} \
+    --port ${MLFLOW_TRACKING_SERVER_PORT}
