--- a/docker/mlflow/Dockerfile
+++ b/docker/mlflow/Dockerfile
@@ -11,6 +11,6 @@ RUN chmod +x /server/wait-for-it.sh
 WORKDIR /server
 CMD ./wait-for-it.sh ${MLFLOW_BACKEND_STORE}:${POSTGRES_PORT} -- mlflow server \
     --backend-store-uri postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${MLFLOW_BACKEND_STORE}:${POSTGRES_PORT}/${POSTGRES_DATABASE} \
-    --default-artifact-root ${MLFLOW_ARTIFACT_STORE} \
+    --default-artifact-root /${MLFLOW_ARTIFACT_STORE} \
     --host ${MLFLOW_TRACKING_SERVER_HOST} \
     --port ${MLFLOW_TRACKING_SERVER_PORT}
