--- a/docker/python-dev/Dockerfile
+++ b/docker/python-dev/Dockerfile
@@ -1,7 +1,9 @@
 FROM python:3.7-slim
 
-COPY ./requirements.txt /code/
-WORKDIR /code
-RUN pip install -r requirements.txt
+COPY docker/python-dev/requirements.txt /install/
+RUN pip install -r /install/requirements.txt && \
+    rm -rf /install
 
+COPY ./ /repo/
+WORKDIR /repo/
 CMD ["tox"]
