--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,8 @@ skip_missing_interpreters = true
 [testenv]
 commands = 
     python --version
-    python -c "from template_repo import __version__; print(__version__)"
-    pytest tests -m "not smoke" --cov=template_repo --cov-report term --cov-append
+    python -c "from python_package import __version__; print(__version__)"
+    pytest tests -m "not smoke" --cov=python_package --cov-report term --cov-append
 description = run unittests
 deps =
     pytest
@@ -39,7 +39,7 @@ skip_install = true
 
 [testenv:flake8]
 commands =
-    flake8 template_repo
+    flake8 python_package
     flake8 setup.py
 deps =
     flake8
@@ -47,7 +47,7 @@ skip_install = true
 
 [testenv:pylint]
 commands =
-    pylint-fail-under --fail_under 9.80 template_repo setup.py
+    pylint-fail-under --fail_under 9.80 python_package setup.py
 deps =
     -rrequirements.txt
     pylint
