Added static Python papckage building

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 VERSION=0.1.0
 
 JUPYTER_PORT=8888
+JUPYTER_TARGET=editable
+JUPYTER_STATIC_TARGET=static
 
 MLFLOW_ARTIFACT_STORE=data/artifacts
 MLFLOW_BACKEND_STORE=postgres
