Corrected postgres user

--- a/.env
+++ b/.env
@@ -1,17 +1,22 @@
 VERSION=0.1.0
 
+JUPYTER_IMAGE_NAME=sertansenturk/jupyter
 JUPYTER_PORT=8888
 JUPYTER_TARGET=editable
 JUPYTER_STATIC_TARGET=static
 
+MLFLOW_IMAGE_NAME=sertansenturk/mlflow
 MLFLOW_ARTIFACT_STORE=data/artifacts
 MLFLOW_BACKEND_STORE=postgres
 MLFLOW_TRACKING_SERVER_HOST=0.0.0.0
 MLFLOW_TRACKING_SERVER_PORT=5000
 MLFLOW_TRACKING_URI=http://mlflow:5000
 
+POSTGRES_IMAGE_NAME=sertansenturk/postgres
 POSTGRES_STORE=data/db
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=secret
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=mlflow
+
+PYTHON_DEV_IMAGE_NAME=sertansenturk/python-dev
