--- a/.travis.yml
+++ b/.travis.yml
@@ -5,25 +5,25 @@ jobs:
   include:
     - name: "docker-compose"
       services: docker
-      python: 3.7
-      before_install:
-        - docker --version
-      install: 
-        -
-      script: make build
-      after_success:
-        -
     - name: "Python 3.7"
       python: 3.7
+      before_install:
+        - ls -la
+      install:
+        - pip install -U pip
+        - pip install tox-travis
+        - pip install codecov
+      script:
+        - tox -e $TOX_PYTHON_ENV -e lint
+      after_success:
+        - codecov # submit coverage to https://codecov.io/gh/sertansenturk/ds-template/        
       env: TOX_PYTHON_ENV=py37
 before_install:
   - ls -la
   - docker --version
 install:
-  - pip install -U pip
-  - pip install tox-travis
-  - pip install codecov
+  - 
 script:
-  - tox -e $TOX_PYTHON_ENV -e lint
+  - make build
 after_success:
-  - codecov # submit coverage to https://codecov.io/gh/sertansenturk/ds-template/
+  - 
