Moved python repo tests to tests/python

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ skip_missing_interpreters = true
 commands = 
     python --version
     python -c "from python_package import __version__; print(__version__)"
-    pytest tests -m "not smoke" --cov=python_package --cov-report term --cov-append
+    pytest ./tests/python -m "not smoke" --cov=python_package --cov-report term --cov-append
 description = run unittests
 deps =
     pytest
