--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ dist: bionic
 jobs:
   include:
     - name: "docker-compose-build"
-      if: branch NOT IN (master, dev)
+      if: branch NOT IN (master, dev) # docker-compose-test covers this scenario
       services: docker
       script: make build
     - name: "docker-compose-test"
