Improved test structure

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ jobs:
     - name: "docker-compose-test"
       if: branch IN (master, dev)
       services: docker
-      script: make test
+      script: 
+        - make test
+        - ls -la /data/artifacts/
     - name: "docker-compose-build-static"
       if: branch IN (master, dev)
       services: docker
