--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ jobs:
       script: 
         - make test
         - ls -la /data/artifacts/
+        - ls -la 
     - name: "docker-compose-build-static"
       if: branch IN (master, dev)
       services: docker
@@ -31,7 +32,9 @@ jobs:
         - codecov # submit coverage to https://codecov.io/gh/sertansenturk/ds-template/        
       env: TOX_PYTHON_ENV=py37
 before_install:
+  - pwd
   - ls -la
+  - id
   - docker --version
 install:
   - 
