--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jobs:
       services: docker
       script: 
         - make test
-        - ls -la /data/artifacts/
+        - ls -la data/artifacts/
         - ls -la 
     - name: "docker-compose-build-static"
       if: branch IN (master, dev)
@@ -34,6 +34,7 @@ jobs:
 before_install:
   - pwd
   - ls -la
+  - ls -la data/artifacts/
   - id
   - docker --version
 install:
