attempting to mkdir ./data/artifacts/1 from command line

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jobs:
       script: 
         - make test
         - ls -la ./data/artifacts/
-        - ls -la 
+        - mkdir ./data/artifacts/1
     # - name: "docker-compose-build-static"
     #   if: branch IN (master, dev)
     #   services: docker
