Retained only relevant parts to test in Dockerfile

--- a/docker/jupyter/Dockerfile
+++ b/docker/jupyter/Dockerfile
@@ -10,18 +10,12 @@ ENV HOME_DIR=/home/$NB_USER \
 RUN conda install --quiet --yes \
     'mlflow=1.7.*' \
     'psycopg2=2.8.*' \
-    'conda-build' \
-    'tqdm' \
-    'jupyter_contrib_nbextensions' \
-    'jupyter_nbextensions_configurator' && \
     conda build purge-all && \
     fix-permissions $CONDA_DIR && \
     fix-permissions $HOME_DIR
 
 USER root
 RUN ldconfig && \
-    jupyter nbextension enable toc2/main --sys-prefix && \
-    jupyter nbextension enable collapsible_headings/main --sys-prefix && \
     mkdir -p $MLFLOW_ARTIFACT_STORE && \
     chown -R $NB_UID:$NB_GID /data
     
@@ -64,15 +58,9 @@ USER $NB_UID
 
 WORKDIR /tests
 
-ENTRYPOINT sleep 5; mkdir /data/artifacts/1; pytest -vv ./docker
-
-################## static image ###################
-FROM jupyter-custom AS static
-
-COPY ./src/ $WORK_DIR/src/
-COPY ./setup.py $WORK_DIR/
-
-WORKDIR $WORK_DIR
-RUN pip install .
-
-ENTRYPOINT ["start-notebook.sh"]
+ENTRYPOINT id; \
+    mkdir /data/artifacts/1; \
+    ls -la /data/artifacts/1; \
+    sleep 5; \
+    pytest -vv ./docker; \
+    /data/artifacts/1
