checking post permissions of artifact store

--- a/docker/jupyter/Dockerfile
+++ b/docker/jupyter/Dockerfile
@@ -65,4 +65,5 @@ ENTRYPOINT id; \
     ls -la /data/artifacts/1; \
     sleep 5; \
     pytest -vv ./docker; \
+    ls -la /data/artifacts; \
     ls -la /data/artifacts/1
