Attempting to create ./data/artifacts/1 inside travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ jobs:
       # if: branch IN (master, dev)
       services: docker
       script: 
-        - mkdir ./data/artifacts/1
+        - mkdir -p ./data/artifacts/1
         - make test
         - ls -la ./data/artifacts/
     # - name: "docker-compose-build-static"
