--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   jupyter:
-    user: "2000:100"
+    user: "${JUPYTER_UID}:100"
     build:
       context: .
       dockerfile: ./docker/jupyter/Dockerfile
