--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
-VERSION=0.3.0
+VERSION=0.4.0
 
 JUPYTER_IMAGE_NAME=sertansenturk/jupyter
 JUPYTER_PORT=8888
 JUPYTER_TARGET=editable
 JUPYTER_STATIC_TARGET=static
 JUPYTER_TEST_TARGET=test
+JUPYTER_ENABLE_LAB=yes
 
 MLFLOW_IMAGE_NAME=sertansenturk/mlflow
 MLFLOW_ARTIFACT_STORE=data/artifacts
