--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,5 @@
 version: '3.7'
 services:
-  # stdin_open: true
-  # tty: true
   jupyter:
     user: root
     build:
@@ -20,9 +18,10 @@ services:
       JUPYTER_ENABLE_LAB: ${JUPYTER_ENABLE_LAB}
       NB_USER: ${JUPYTER_USERNAME}
       NB_UID: ${JUPYTER_UID}
-      NB_GID: 100 
+      CHOWN_EXTRA: /home/${JUPYTER_USERNAME}
+      CHOWN_EXTRA_OPTS: '-R'
     volumes: 
-      - ./:/home/jovyan/work
+      - ./:/home/${JUPYTER_USERNAME}/work
       - ./${MLFLOW_ARTIFACT_STORE}:/${MLFLOW_ARTIFACT_STORE}
   mlflow:
     build:
@@ -52,8 +51,8 @@ services:
     image: ${POSTGRES_IMAGE_NAME}:${VERSION}
     restart: always
     environment: 
-      POSTGRES_PASSWORD: secret
-      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
     ports:
       - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
