--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
       JUPYTER_ENABLE_LAB: ${JUPYTER_ENABLE_LAB}
       NB_USER: ${JUPYTER_USERNAME}
       NB_UID: ${JUPYTER_UID}
-      CHOWN_EXTRA: /home/${JUPYTER_USERNAME}
-      CHOWN_EXTRA_OPTS: '-R'
+      CHOWN_HOME: "yes"
+      CHOWN_HOME_OPTS: '-R'
     volumes: 
       - ./:/home/${JUPYTER_USERNAME}/work
       - ./${MLFLOW_ARTIFACT_STORE}:/${MLFLOW_ARTIFACT_STORE}
