Passing jupyter --user to compose.yml as an env var

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ JUPYTER_TARGET=editable
 JUPYTER_STATIC_TARGET=static
 JUPYTER_TEST_TARGET=test
 JUPYTER_ENABLE_LAB=yes
+JUPYTER_DOCKER_COMPOSE_USER=root
 
 MLFLOW_IMAGE_NAME=sertansenturk/mlflow
 MLFLOW_ARTIFACT_STORE=data/artifacts
