--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   jupyter:
-    user: root
+    user: ${JUPYTER_DOCKER_COMPOSE_USER}
     build:
       context: .
       dockerfile: ./docker/jupyter/Dockerfile
