--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,12 @@ jobs:
       if: branch IN (master, dev)
       services: docker
       script: 
-        - make test
+        - make test & # start the stack in the background; runs pytests before Jupyter 
+        - sleep 60 # give 1 min for pytest & Jupyter idle run
+        - make down # down the stack
+        - make clean-store # succeeds if the permissions are correct
       after_script:
-        - ls -la ./data/  # mlflow artifact & tracking data
+        - ls -la ./data/ # mlflow artifact & tracking data
     - name: "docker-compose-build-static"
       if: branch IN (master, dev)
       services: docker
