renamed:    docker/jupyter/scripts/run_tests.sh -> docker/jupyter/scripts/run_pytest.sh

--- a/docker/jupyter/Dockerfile
+++ b/docker/jupyter/Dockerfile
@@ -54,7 +54,9 @@ COPY ./docker/jupyter/requirements.test.txt ${TEST_DIR}/
 RUN pip install -r ${TEST_DIR}/requirements.test.txt
 
 COPY ./tests/docker ${TEST_DIR}/docker
-COPY ./docker/jupyter/scripts/run_tests.sh /usr/local/bin/before-notebook.d/
+# run as a before-notebook hook:
+# https://jupyter-docker-stacks.readthedocs.io/en/latest/using/common.html#startup-hooks
+COPY ./docker/jupyter/scripts/run_pytest.sh /usr/local/bin/before-notebook.d/
 
 USER root
 RUN chown -R $NB_UID:$NB_GID ${TEST_DIR}/
