Increased the idle time from 1 min to 8 mins for travis docker test

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ jobs:
       services: docker
       script: 
         - make test & # start the stack in the background; runs pytests before Jupyter 
-        - sleep 60 # give 1 min for pytest & Jupyter idle run
+        - sleep 480 # give 6 min for docker build, pytest & Jupyter idle run
         - make down # down the stack
-        - make clean-store # succeeds if the permissions are correct
+        - make clean-stores # succeeds if the permissions are correct
       after_script:
         - ls -la ./data/ # mlflow artifact & tracking data
     - name: "docker-compose-build-static"
