--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       NB_UID: ${JUPYTER_UID}
       CHOWN_HOME: "yes"
       CHOWN_HOME_OPTS: '-R'
+      CHOWN_EXTRA: 
+      CHOWN_EXTRA_OPTS: '-R'
     volumes:
       - ./:/home/${JUPYTER_USERNAME}/work
       - ./${MLFLOW_ARTIFACT_STORE}:/${MLFLOW_ARTIFACT_STORE}
