Specified jupyter base images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
       target: ${JUPYTER_TARGET}
       args: 
         - MLFLOW_ARTIFACT_STORE=/${MLFLOW_ARTIFACT_STORE}
-    image: ${JUPYTER_IMAGE_NAME}-${JUPYTER_TARGET}:${VERSION}
+        - JUPYTER_BASE_IMAGE=${JUPYTER_BASE_IMAGE}
+        - JUPYTER_BASE_VERSION=${JUPYTER_BASE_VERSION}
+    image: ${IMAGE_OWNER}/${JUPYTER_BASE_IMAGE}-${JUPYTER_TARGET}:${VERSION}
     ports:
       - "${JUPYTER_PORT}:${JUPYTER_PORT}"
     depends_on: 
@@ -28,7 +30,7 @@ services:
   mlflow:
     build:
       context: ./docker/mlflow
-    image: ${MLFLOW_IMAGE_NAME}:${VERSION}
+    image: ${IMAGE_OWNER}/${MLFLOW_IMAGE_NAME}:${VERSION}
     expose: 
       - "${MLFLOW_TRACKING_SERVER_PORT}"
     ports:
@@ -50,7 +52,7 @@ services:
     user: "${POSTGRES_UID}:${POSTGRES_GID}"
     build:
       context: ./docker/postgres
-    image: ${POSTGRES_IMAGE_NAME}:${VERSION}
+    image: ${IMAGE_OWNER}/${POSTGRES_IMAGE_NAME}:${VERSION}
     restart: always
     environment: 
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
