Added REPO_NAME no images

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ VERSION=0.6.0
 
 DATA_DIR=data/
 IMAGE_OWNER=sertansenturk
+REPO_NAME=ds-template
 
 JUPYTER_SCIPY_IMAGE=scipy-notebook
 JUPYTER_SCIPY_VERSION=dc9744740e12
