--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         - MLFLOW_ARTIFACT_STORE=/${MLFLOW_ARTIFACT_STORE}
         - JUPYTER_BASE_IMAGE=${JUPYTER_BASE_IMAGE}
         - JUPYTER_BASE_VERSION=${JUPYTER_BASE_VERSION}
-    image: ${IMAGE_OWNER}/${JUPYTER_BASE_IMAGE}-${JUPYTER_TARGET}:${VERSION}
+    image: ${IMAGE_OWNER}/${REPO_NAME}/${JUPYTER_BASE_IMAGE}-${JUPYTER_TARGET}:${VERSION}
     ports:
       - "${JUPYTER_PORT}:${JUPYTER_PORT}"
     depends_on: 
@@ -30,7 +30,7 @@ services:
   mlflow:
     build:
       context: ./docker/mlflow
-    image: ${IMAGE_OWNER}/${MLFLOW_IMAGE_NAME}:${VERSION}
+    image: ${IMAGE_OWNER}/${REPO_NAME}/${MLFLOW_IMAGE_NAME}:${VERSION}
     expose: 
       - "${MLFLOW_TRACKING_SERVER_PORT}"
     ports:
@@ -52,7 +52,7 @@ services:
     user: "${POSTGRES_UID}:${POSTGRES_GID}"
     build:
       context: ./docker/postgres
-    image: ${IMAGE_OWNER}/${POSTGRES_IMAGE_NAME}:${VERSION}
+    image: ${IMAGE_OWNER}/${REPO_NAME}/${POSTGRES_IMAGE_NAME}:${VERSION}
     restart: always
     environment: 
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
