Added git to python dev docker

--- a/docker/python-dev/Dockerfile
+++ b/docker/python-dev/Dockerfile
@@ -1,5 +1,11 @@
 FROM python:3.7-slim
 
+# install git; needed for pip if the repo git dependencies
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends git && \
+    apt-get purge -y --auto-remove && \
+    rm -rf /var/lib/apt/lists/*
+
 COPY docker/python-dev/requirements.txt /install/
 RUN pip install -r /install/requirements.txt && \
     rm -rf /install
