--- a/{{ cookiecutter.repo_name }}/.env
+++ b/{{ cookiecutter.repo_name }}/.env
@@ -1,8 +1,8 @@
 VERSION=0.6.0
 
 DATA_DIR=data/
-IMAGE_OWNER=sertansenturk
-REPO_NAME=ds-template
+IMAGE_OWNER={{ cookiecutter.user_slug }}
+REPO_NAME={{ cookiecutter.repo_name }}
 
 JUPYTER_SCIPY_IMAGE=scipy-notebook
 JUPYTER_SCIPY_VERSION=dc9744740e12
