DST-20 Fixed username in .env

--- a/{{ cookiecutter.repo_name }}/.env
+++ b/{{ cookiecutter.repo_name }}/.env
@@ -1,7 +1,7 @@
 VERSION=0.6.0
 
 DATA_DIR=data/
-IMAGE_OWNER={{ cookiecutter.user_slug }}
+IMAGE_OWNER={{ cookiecutter.username }}
 REPO_NAME={{ cookiecutter.repo_name }}
 
 JUPYTER_SCIPY_IMAGE=scipy-notebook
