--- a/{{ cookiecutter.repo_name }}/docker/python-dev/Dockerfile
+++ b/{{ cookiecutter.repo_name }}/docker/python-dev/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.7-slim
 
-# install git; needed for pip if the repo git dependencies
+# install git; needed for pip if the repo has git dependencies
 RUN apt-get update && \
     apt-get install -y --no-install-recommends git && \
     apt-get purge -y --auto-remove && \
