--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,14 @@ os: linux
 dist: bionic
 jobs:
   include:
+    -name: "cookiecutter-test"
+      python: 3.7
+      install:
+        - pip install -U pip
+        - pip install cookiecutter
+      script: 
+        - cookiecutter --no-input ds-template repo_name=test-repo author_name=test_author author_email=test_email github_username=test_user description=test_description
+        - ls -la test-repo
     - name: "docker-compose-build"
       if: branch NOT IN (master, dev) # already covered by docker-compose-test
       services: docker
