--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jobs:
         - pip install -U pip
         - pip install cookiecutter
       script: 
-        - cookiecutter --no-input repo_name=test-repo author_name=test_author author_email=test_email github_username=test_user description=test_description
+        - cookiecutter --no-input ./ repo_name=test-repo author_name=test_author author_email=test_email github_username=test_user description=test_description
         - ls -la test-repo
     - name: "docker-compose-build"
       if: branch NOT IN (master, dev) # already covered by docker-compose-test
