--- a/.travis.yml
+++ b/.travis.yml
@@ -15,17 +15,15 @@ jobs:
         - make test
       after_script:
         - ls -la ./data/ # mlflow artifact & tracking data
-    - name: "Python 3.7"
-      python: 3.7
+    - name: "tox"
+      env: TOX_PYTHON_ENV=py37
       install:
-        - pip install -U pip
         - pip install tox-travis
         - pip install codecov
       script:
         - tox -e $TOX_PYTHON_ENV -e lint
       after_success:
-        - codecov # submit coverage to https://codecov.io/gh/sertansenturk/cookiecutter-ds-docker/        
-      env: TOX_PYTHON_ENV=py37
+        - codecov # submit coverage to https://codecov.io/gh/sertansenturk/cookiecutter-ds-docker/
 before_install:
   - pwd
   - ls -la
